# orchestration-protocol

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Orchestrator 模拟审批.py  README.md  README_EN.md  lint.py  lint_core.py  lint_full.py  lint_gate.py  orchestration-protocol.md  orchestrator-role.md  orchestrator.py  pipeline-analysis.html  pipeline-architecture-overview.html  pipeline.py  setup.py  spawn_agents.py  status.py  test-registration.py  test_lint.py  test_orchestrator.py  test_pipeline.py  worker agent 模拟提交请求.py  worker 模拟等待轮询.py  worker-role.md  会话转录分析  审查报告.md  持久记忆服务器  新架构.md
.claude/: SKILL.md  settings.json  settings.local.json
.claude/skills/: orchestration-protocol.md  orchestrator-role.md  worker-role.md
.claude/skills/orchestration-protocol/: SKILL.md
.claude/skills/orchestrator-role/: SKILL.md
.claude/skills/reviewer-role/: SKILL.md
.claude/skills/worker-role/: SKILL.md
archive/v1-design-notes/: worker写入.py
docs/: orchestration-lightweight-rigor.html
docs/superpowers/plans/: 2026-05-28-new-orch.md  2026-05-28-rust-rewrite.md  更新计划.md
src/: db.rs  lib.rs  lint.rs  orchestrator.rs  pipeline.rs
更新/: Orchestrator 写入视角.py  Orchestrator 重启逻辑.py  worker重启回复.py  优化计划.md  状态表  补充
