[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
git2 = "0.19"

[[bin]]
name = "status"
path = "src/bin/status.rs"
